--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 27/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 255 points<br>
+Unlocked 27/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 258 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -22,6 +22,7 @@ Unlocked 27/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Apprentice Blacksmith (Level 2)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Apprentice Blacksmith (Level 3)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Apprentice Butcher (Level 1)</div>  <div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
+<li><div class="title">Apprentice Butcher (Level 2)</div>  <div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
 <li><div class="title">Apprentice Chimney Sweeper (Level 1)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-gc.html">git-gc</a> to run a number of housekeeping tasks on the current repository.</div></li>
 <li><div class="title">Apprentice Cleaning lady (Level 3)</div>  <div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
 <li><div class="title">Apprentice Goldsmith (Level 1)</div>  <div class="info">Reviewed patches before committing with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-diff.html">git-diff</a> --cached.</div></li>
@@ -85,28 +86,28 @@ Unlocked 27/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-    498 --git-dir=.git
-    440 status
-    266 checkout
-    185 difftool
-    159 branch
-    143 help
-    143 commit
-    132 add
-     94 push
-     86 reset
-     76 rev-parse
-     73 rebase
-     61 clean
-     59 diff
+    511 --git-dir=.git
+    503 status
+    278 checkout
+    199 difftool
+    165 branch
+    150 help
+    149 commit
+    146 reset
+    141 add
+    115 clean
+     97 rebase
+     96 push
+     78 rev-parse
+     74 diff
      48 stash
-     36 --git-dir=/home/stavros/git/otp/.git
+     39 --git-dir=/home/stavros/git/otp/.git
+     35 log
      30 bisect
-     29 log
      28 remote
-     21 pull
-     20 mergetool
-     17 tree
+     27 mergetool
+     22 pull
+     20 tree
      16 cherry-pick
      12 merge
       6 init
