--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 27/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 261 points<br>
+Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 265 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -39,6 +39,7 @@ Unlocked 27/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Apprentice Merchant (Level 1)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
 <li><div class="title">Apprentice Miller (Level 1)</div>  <div class="info">Add only part of a file to the stage 92 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
 <li><div class="title">Apprentice Miller (Level 2)</div>  <div class="info">Add only part of a file to the stage 133 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
+<li><div class="title">Apprentice Presenter (Level 3)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
 <li><div class="title">Apprentice Product Manager (Level 1)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Apprentice Product Manager (Level 2)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Apprentice Product Manager (Level 3)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
@@ -87,40 +88,40 @@ Unlocked 27/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-    528 --git-dir=.git
-    520 status
-    288 checkout
-    200 difftool
-    171 branch
-    157 help
-    153 reset
-    151 commit
-    142 add
-    116 clean
-    101 push
-     98 rebase
+    571 --git-dir=.git
+    552 status
+    310 checkout
+    218 difftool
+    188 branch
+    168 help
+    166 reset
+    160 commit
+    146 add
+    118 clean
+    108 push
+    102 rebase
+     90 diff
      78 rev-parse
-     78 diff
-     53 stash
-     39 --git-dir=/home/stavros/git/otp/.git
+     58 stash
+     47 --git-dir=/home/stavros/git/otp/.git
      35 log
+     30 remote
+     30 mergetool
      30 bisect
-     28 remote
-     28 mergetool
+     23 pull
      22 tree
-     22 pull
-     16 cherry-pick
+     17 cherry-pick
      14 merge
       6 init
       4 --git-dir=/home/stavros/git/dialyzer_tests/.git
       4 gc
       4 blame
+      3 show
+      3 rm
       3 config
       2 tag
-      2 show
       2 ls-remote
       2 clone
-      1 rm
       1 revert
       1 mv
       1 merge-base
@@ -155,7 +156,6 @@ There are 50 Achievements. Some achievements can be leveled up depending on the 
 <li><div class="title">Pilgrim</div><div class="info">Performed a rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> --onto.</div></li>
 <li><div class="title">Plumber</div><div class="info">Use the internal plumbing commands of git.</div></li>
 <li><div class="title">Postman</div><div class="info">Send a collection of patches from stdin to an IMAP folder with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-imap-send.html">git-imap-send</a></div></li>
-<li><div class="title">Presenter</div><div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
 <li><div class="title">Stamp Collector</div><div class="info">Investigate old branches by using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-reflog.html">git-reflog</a> --date=relative</div></li>
 <li><div class="title">Traveler</div><div class="info">Streamed changes between another rcs with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-svn.html">git-svn</a> or <a href="http://www.kernel.org/pub/software/scm/git/docs/git-p4.html">git-p4</a>.</div></li>
 <li><div class="title">Tree Trimmer</div><div class="info">Rewrite branches with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-filter-branch.html">git-filter-branch</a></div></li>
