--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 265 points<br>
+Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 271 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -85,31 +85,32 @@ Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Stone Mason (Level 6)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Student</div>  <div class="info">Accessed the documentation for a command with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-.html">git-</a>[command] --help</div></li>
 <li><div class="title">Thug (Level 4)</div>  <div class="info">Forced pushed a branch with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a> -f</div></li>
+<li><div class="title">Thug (Level 5)</div>  <div class="info">Forced pushed a branch with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a> -f</div></li>
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-    571 --git-dir=.git
-    552 status
-    310 checkout
-    218 difftool
-    188 branch
-    168 help
+    579 --git-dir=.git
+    562 status
+    314 checkout
+    222 difftool
+    191 branch
+    171 help
     166 reset
-    160 commit
+    161 commit
     146 add
     118 clean
-    108 push
-    102 rebase
+    111 push
+    105 rebase
      90 diff
      78 rev-parse
      58 stash
      47 --git-dir=/home/stavros/git/otp/.git
      35 log
-     30 remote
+     31 remote
      30 mergetool
      30 bisect
-     23 pull
-     22 tree
+     24 pull
+     23 tree
      17 cherry-pick
      14 merge
       6 init
@@ -122,6 +123,7 @@ Git commands sorted by usage:
       2 tag
       2 ls-remote
       2 clone
+      1 --version
       1 revert
       1 mv
       1 merge-base
