--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 271 points<br>
+Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 278 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -77,6 +77,7 @@ Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Master Stone Mason (Level 7)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Product Manager (Level 4)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Product Manager (Level 5)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
+<li><div class="title">Product Manager (Level 6)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Seamstress (Level 4)</div>  <div class="info">amended a commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> --amend.</div></li>
 <li><div class="title">Socialite (Level 4)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Socialite (Level 5)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
@@ -89,28 +90,28 @@ Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-    579 --git-dir=.git
-    562 status
-    314 checkout
-    222 difftool
-    191 branch
-    171 help
-    166 reset
-    161 commit
-    146 add
-    118 clean
-    111 push
-    105 rebase
+    609 --git-dir=.git
+    575 status
+    334 checkout
+    228 difftool
+    200 branch
+    179 help
+    168 reset
+    164 commit
+    148 add
+    123 clean
+    115 push
+    108 rebase
      90 diff
      78 rev-parse
-     58 stash
+     62 stash
      47 --git-dir=/home/stavros/git/otp/.git
+     35 mergetool
      35 log
      31 remote
-     30 mergetool
      30 bisect
+     24 tree
      24 pull
-     23 tree
      17 cherry-pick
      14 merge
       6 init
