--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 278 points<br>
+Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 286 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -74,6 +74,7 @@ Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Let there be light</div>  <div class="info">Commit without a parent.</div></li>
 <li><div class="title">Librarian</div>  <div class="info">Looked for change that introduce or remove a string with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a> -S</div></li>
 <li><div class="title">Master Author (Level 7)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
+<li><div class="title">Master Cleaning lady (Level 7)</div>  <div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
 <li><div class="title">Master Stone Mason (Level 7)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Product Manager (Level 4)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Product Manager (Level 5)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
@@ -90,32 +91,32 @@ Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-    609 --git-dir=.git
-    575 status
-    334 checkout
-    228 difftool
-    200 branch
-    179 help
-    168 reset
-    164 commit
-    148 add
-    123 clean
-    115 push
-    108 rebase
-     90 diff
+    637 --git-dir=.git
+    610 status
+    379 checkout
+    234 difftool
+    210 branch
+    187 help
+    175 commit
+    174 reset
+    157 add
+    125 clean
+    122 push
+    110 rebase
+     91 diff
+     88 stash
      78 rev-parse
-     62 stash
-     47 --git-dir=/home/stavros/git/otp/.git
+     49 --git-dir=/home/stavros/git/otp/.git
      35 mergetool
      35 log
      31 remote
      30 bisect
-     24 tree
-     24 pull
+     25 tree
+     25 pull
      17 cherry-pick
      14 merge
       6 init
-      4 --git-dir=/home/stavros/git/dialyzer_tests/.git
+      5 --git-dir=/home/stavros/git/dialyzer_tests/.git
       4 gc
       4 blame
       3 show
