--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 294 points<br>
+Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 298 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -39,6 +39,7 @@ Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Apprentice Merchant (Level 1)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
 <li><div class="title">Apprentice Miller (Level 1)</div>  <div class="info">Add only part of a file to the stage 92 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
 <li><div class="title">Apprentice Miller (Level 2)</div>  <div class="info">Add only part of a file to the stage 133 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
+<li><div class="title">Apprentice Miller (Level 3)</div>  <div class="info">Add only part of a file to the stage 167 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
 <li><div class="title">Apprentice Presenter (Level 3)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
 <li><div class="title">Apprentice Product Manager (Level 1)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Apprentice Product Manager (Level 2)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
@@ -92,29 +93,29 @@ Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-    651 --git-dir=.git
-    626 status
-    382 checkout
-    240 difftool
-    217 branch
-    192 help
-    182 commit
-    174 reset
-    160 add
-    126 push
+    686 --git-dir=.git
+    638 status
+    410 checkout
+    243 difftool
+    227 branch
+    196 help
+    186 commit
+    177 reset
+    162 add
+    132 push
     126 clean
-    116 rebase
-     91 diff
-     90 stash
-     78 rev-parse
-     49 --git-dir=/home/stavros/git/otp/.git
+    123 rebase
+     94 diff
+     92 stash
+     80 rev-parse
+     50 --git-dir=/home/stavros/git/otp/.git
      35 mergetool
      35 log
      32 remote
      30 bisect
+     27 pull
      26 tree
-     26 pull
-     17 cherry-pick
+     18 cherry-pick
      14 merge
       6 init
       5 --git-dir=/home/stavros/git/dialyzer_tests/.git
@@ -123,9 +124,9 @@ Git commands sorted by usage:
       3 show
       3 rm
       3 config
+      3 clone
       2 tag
       2 ls-remote
-      2 clone
       1 --version
       1 revert
       1 mv
