--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 298 points<br>
+Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 305 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -70,6 +70,7 @@ Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Garage Inventor</div>  <div class="info">Used a custom alias for a Git command</div></li>
 <li><div class="title">Historian (Level 4)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Historian (Level 5)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
+<li><div class="title">Historian (Level 6)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Homeowner</div>  <div class="info">Set global email address using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-config.html">git-config</a>.</div></li>
 <li><div class="title">Hunter (Level 4)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-bisect.html">git-bisect</a> to perform a binary search to find which change introduced a bug.</div></li>
 <li><div class="title">Let there be light</div>  <div class="info">Commit without a parent.</div></li>
@@ -93,35 +94,35 @@ Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-    686 --git-dir=.git
-    638 status
-    410 checkout
-    243 difftool
-    227 branch
-    196 help
-    186 commit
-    177 reset
-    162 add
-    132 push
-    126 clean
-    123 rebase
-     94 diff
-     92 stash
-     80 rev-parse
-     50 --git-dir=/home/stavros/git/otp/.git
-     35 mergetool
-     35 log
-     32 remote
+    787 --git-dir=.git
+    707 status
+    468 checkout
+    282 branch
+    280 difftool
+    225 help
+    211 commit
+    195 reset
+    175 add
+    158 push
+    150 rebase
+    136 clean
+    103 diff
+     99 stash
+     98 rev-parse
+     57 --git-dir=/home/stavros/git/otp/.git
+     56 log
+     41 mergetool
+     36 remote
+     33 pull
      30 bisect
-     27 pull
      26 tree
-     18 cherry-pick
-     14 merge
+     23 cherry-pick
+     15 merge
+      8 show
       6 init
       5 --git-dir=/home/stavros/git/dialyzer_tests/.git
       4 gc
       4 blame
-      3 show
       3 rm
       3 config
       3 clone
