--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 310 points<br>
+Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 316 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -84,6 +84,7 @@ Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Product Manager (Level 5)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Product Manager (Level 6)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Seamstress (Level 4)</div>  <div class="info">amended a commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> --amend.</div></li>
+<li><div class="title">Seamstress (Level 5)</div>  <div class="info">amended a commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> --amend.</div></li>
 <li><div class="title">Socialite (Level 4)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Socialite (Level 5)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Socialite (Level 6)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
@@ -95,40 +96,41 @@ Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-    796 --git-dir=.git
-    715 status
-    475 checkout
-    295 branch
-    282 difftool
-    225 help
-    211 commit
-    195 reset
-    175 add
-    164 push
-    158 rebase
-    140 clean
-    103 diff
-    101 stash
-     98 rev-parse
+    835 --git-dir=.git
+    750 status
+    503 checkout
+    315 branch
+    286 difftool
+    237 help
+    219 commit
+    197 reset
+    187 add
+    170 push
+    167 rebase
+    144 clean
+    111 diff
+    110 stash
+    105 rev-parse
+     60 --git-dir=/home/stavros/git/otp/.git
      57 log
-     57 --git-dir=/home/stavros/git/otp/.git
-     45 mergetool
-     36 remote
-     33 pull
+     50 mergetool
+     38 pull
+     37 remote
      30 bisect
      26 tree
-     23 cherry-pick
+     24 cherry-pick
+     15 show
      15 merge
-     10 show
+      8 --git-dir=/home/stavros/git/dialyzer_tests/.git
       6 init
-      5 --git-dir=/home/stavros/git/dialyzer_tests/.git
+      4 rm
       4 gc
       4 blame
-      3 rm
       3 config
       3 clone
       2 tag
       2 ls-remote
+      2 --git-dir=/home/stavros/git/dialyzer-bugs/.git
       1 --version
       1 revert
       1 mv
