--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 316 points<br>
+Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 324 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -77,6 +77,7 @@ Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Librarian</div>  <div class="info">Looked for change that introduce or remove a string with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a> -S</div></li>
 <li><div class="title">Master Author (Level 7)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Master Cleaning lady (Level 7)</div>  <div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
+<li><div class="title">Master Product Manager (Level 7)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Master Socialite (Level 7)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Master Stone Mason (Level 7)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Presenter (Level 4)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
@@ -96,44 +97,44 @@ Unlocked 28/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-    835 --git-dir=.git
-    750 status
-    503 checkout
-    315 branch
-    286 difftool
-    237 help
-    219 commit
-    197 reset
-    187 add
-    170 push
-    167 rebase
-    144 clean
-    111 diff
-    110 stash
-    105 rev-parse
-     60 --git-dir=/home/stavros/git/otp/.git
-     57 log
-     50 mergetool
+    844 --git-dir=.git
+    796 status
+    508 checkout
+    321 branch
+    291 difftool
+    241 help
+    235 commit
+    202 reset
+    198 add
+    179 push
+    173 rebase
+    146 clean
+    126 stash
+    115 diff
+    110 rev-parse
+     63 --git-dir=/home/stavros/git/otp/.git
+     62 log
+     52 mergetool
      38 pull
      37 remote
      30 bisect
      26 tree
      24 cherry-pick
-     15 show
+     18 show
      15 merge
+      9 rm
       8 --git-dir=/home/stavros/git/dialyzer_tests/.git
       6 init
-      4 rm
+      5 blame
       4 gc
-      4 blame
       3 config
       3 clone
       2 tag
+      2 mv
       2 ls-remote
       2 --git-dir=/home/stavros/git/dialyzer-bugs/.git
       1 --version
       1 revert
-      1 mv
       1 merge-base
       1 --git-dir=
       1 fetch
